Test media dir with git

--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,5 @@ Press h to open a hovercard with more details.
 #static_cdn - Emulate external static files source
 static_cdn/
 
-media/
+media/profile_images/*
+media/thumbnail_images/*
